--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
 set(GAMEFRAMEWORK_DIR /home/amon/grive/development/GameFramework)
 set(FREETYPE_DIR /usr/include/freetype2)
 
-include_directories(${GAMEFRAMEWORK_DIR}/src/cpp ${FREETYPE_DIR})
-link_directories(${GAMEFRAMEWORK_DIR}/build)
+set(MKL_DIR /opt/intel/compilers_and_libraries/linux/mkl)
+
+include_directories(${GAMEFRAMEWORK_DIR}/src/cpp ${FREETYPE_DIR} ${MKL_DIR}/include)
+link_directories(${GAMEFRAMEWORK_DIR}/build ${MKL_DIR}/lib/intel64_lin/ ${MKL_DIR}/lib/intel64)
 add_executable(MSNExample ${SOURCE_FILES_CPP} ${SOURCE_FILES_H})
-target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png)
+target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png mkl_intel_lp64 mkl_core mkl_sequential m dl)
 
 
 
