Milestone: Implementing variational mass spring system solver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ set(MKL_DIR /opt/intel/compilers_and_libraries/linux/mkl)
 include_directories(${GAMEFRAMEWORK_DIR}/src/cpp ${FREETYPE_DIR} ${MKL_DIR}/include)
 link_directories(${GAMEFRAMEWORK_DIR}/build ${MKL_DIR}/lib/intel64_lin/ ${MKL_DIR}/lib/intel64)
 add_executable(MSNExample ${SOURCE_FILES_CPP} ${SOURCE_FILES_H})
-target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png mkl_intel_lp64 mkl_core mkl_sequential m dl)
+target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png)
 
 
 
