Modifying CMakeFiles.txt with 'find_packages' command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
 cmake_minimum_required(VERSION 3.5)
 project(MSN CXX)
 
-set(CMAKE_CXX_COMPILER c++)
+# -> required packages
+find_package(Freetype REQUIRED)
+include_directories(${FREETYPE_INCLUDE_DIRS})
+
+find_package(Eigen3 3.3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIRS})
+# <-
+
+set(CMAKE_CXX_COMPILER "c++")
+set(CMAKE_MAKEFILE_VERBOSE 1)
 
 # -DEIGEN_NO_DEBUG
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -fopenmp -std=c++14  -DGLEW_NO_GLU -DEIGEN_NO_DEBUG")
@@ -20,11 +29,9 @@ set(SOURCE_FILES_H
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
 
 set(GAMEFRAMEWORK_DIR /home/amon/grive/development/GameFramework)
-set(FREETYPE_DIR /usr/include/freetype2)
 
-set(MKL_DIR /opt/intel/compilers_and_libraries/linux/mkl)
 
-include_directories(${GAMEFRAMEWORK_DIR}/src/cpp ${FREETYPE_DIR})
+include_directories(${GAMEFRAMEWORK_DIR}/src/cpp)
 link_directories(${GAMEFRAMEWORK_DIR}/build)
 add_executable(MSNExample ${SOURCE_FILES_CPP} ${SOURCE_FILES_H})
 target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png)
