--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${EIGEN3_INCLUDE_DIRS})
 set(CMAKE_CXX_COMPILER "c++")
 
 # -DEIGEN_NO_DEBUG
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -fopenmp -std=c++14  -DGLEW_NO_GLU -DEIGEN_NO_DEBUG")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -fopenmp -std=c++14  -DGLEW_NO_GLU")
 
 set(SOURCE_FILES_CPP
         src/main.cpp
