Fixing CMakeFiles.txt. Fixing MM-multiplication issue. Removing rendering capability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.0)
 project(MSN CXX)
 
-set(CMAKE_CXX_COMPILER c++)
+find_package(Eigen3 3.3.3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
+MESSAGE( STATUS "EIGEN_DIR:         " ${EIGEN3_INCLUDE_DIR})
+
+set(CMAKE_CXX_COMPILER "c++")
 
 # -DEIGEN_NO_DEBUG
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -fopenmp -std=c++14  -DGLEW_NO_GLU")
@@ -19,15 +23,7 @@ set(SOURCE_FILES_H
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
 
-set(GAMEFRAMEWORK_DIR /home/amon/grive/development/GameFramework)
-set(FREETYPE_DIR /usr/include/freetype2)
 
-set(MKL_DIR /opt/intel/compilers_and_libraries/linux/mkl)
-
-include_directories(${GAMEFRAMEWORK_DIR}/src/cpp ${FREETYPE_DIR})
-link_directories(${GAMEFRAMEWORK_DIR}/build)
+include_directories(${GAMEFRAMEWORK_DIR}/src/cpp)
 add_executable(MSNExample ${SOURCE_FILES_CPP} ${SOURCE_FILES_H})
-target_link_libraries(MSNExample GameFramework GLEW glfw GL freetype png)
-
-
 
